# prefect-project-1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  prefect.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_create.sh
.github/workflows/: ci.yaml
flows/: hello_flow.py  prefect.yaml
scripts/: hello.py  trigger_flow_api.py
src/prefect_project_1/greet/: greeter.py
tests/greet/: test_greeter.py
