[project]
name = "python-devcontainer-template"
version = "0.1.0"
description = "Pythom devcontainer template"
authors = [
    {name = "Jonathan Tremblay"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "prefect>=3.4.14",
    "ruff>=0.12.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
