[project]
name = "prefect-project-1"
version = "0.1.0"
description = "Prefect project template"
authors = [
    {name = "Jonathan Tremblay"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "prefect>=3.4.14",
    "ruff>=0.12.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.0",
    "pre-commit>=3.0.0",
]

test = [
    "pytest>=8.4.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["prefect_project_1"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_project_1"]